// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage should render correctly when there is an error 1`] = `
<div>
  <div
    class="ErrorMessage"
  >
    Error
  </div>
</div>
`;

exports[`ErrorMessage should render correctly when there is no error 1`] = `
<div>
  <div
    class="ErrorMessage"
  />
</div>
`;
